--- a/软件架构/软件架构.md
+++ b/软件架构/软件架构.md
@@ -167,7 +167,7 @@
 
 * **注意用例规约格式**
 
-  ![image-20231225165945832](E:\Typora\pictures\image-20231225165945832.png)
+  ![image-20231225165945832](https://img-blog.csdnimg.cn/direct/c6de2d0af3fe4dc68634c447b58dfe98.png)
 
 
 
@@ -178,14 +178,312 @@
   * 吞吐量
   * 并发用户数
   * 资源使用率![image-20231225172855240](https://img-blog.csdnimg.cn/direct/814fcc84237b48ed9f1b8685f1cc7df0.png)
-
 * 安全性需求
 * 可靠性需求
 * 操作性需求
 * 隐私需求
-* 
+* 可扩展性
+* 可维护性
+
+## 第五章 软件架构设计
+
+### **1.系统架构类型**
+
+* 系统总体架构
+
+![image-20231226095124965](https://img-blog.csdnimg.cn/direct/9474dc2c714745a785c1feae6d7666cc.png)
+
+* 系统应用架构
+
+  ![image-20231226100049201](https://img-blog.csdnimg.cn/direct/cabc38b3b1624f79a07544a42f38774c.png)
+
+  * 应用架构设计层次![image-20231226100107720](https://img-blog.csdnimg.cn/direct/20204ec64d474dd59c7e9b0f69b6d6ba.png)
+
+* 系统数据架构
+
+  ![image-20231226095606612](https://img-blog.csdnimg.cn/direct/f43b6fc3e787472186148a1518973a39.png)
+
+  * 数据分层架构![image-20231226095623513](https://img-blog.csdnimg.cn/direct/7d05a1e40e484bdf88e9650a99cb4167.png)
+  * 数据治理架构![image-20231226095753283](https://img-blog.csdnimg.cn/direct/53218f72d2104fe1abca546f74afc83e.png)
+  * 数据存储架构![image-20231226095808668](https://img-blog.csdnimg.cn/direct/20ecc87321bf42ec8b00c8fa8fa45584.png)
+
+* 系统拓扑架构
+
+  ![image-20231226095139891](https://img-blog.csdnimg.cn/direct/1ed4ba28790c4c0ba85a3880ca1bd74d.png)
+
+  * 拓扑架构基本类型
+    * 总线型、树形、星型、网状型、混合型
+  * 案例![image-20231226095342657](https://img-blog.csdnimg.cn/direct/8306a9e2d3a74787a5e038a4bd66a764.png)
+
+* 系统软件架构
+
+  ![image-20231226100201100](https://img-blog.csdnimg.cn/direct/d3847d347392436c9ea0390162acf3a4.png)
+
+  * 案例![image-20231226100357063](https://img-blog.csdnimg.cn/direct/142931ad851a4e4882db001c69894e6a.png)
 
 
+
+### **2.软件架构风格**
+
+* 分层体系架构
+
+  * 每一层都是为上一层提供服务，并使用下一层提供的服务
+  * 案例：Linux系统架构![image-20231226100549330](https://img-blog.csdnimg.cn/direct/690e1a176c6a4ee1a78481b05f64dbce.png)
+  * 优点：
+    * 整体设计简化，系统结构清晰
+    * 支持扩展设计，每层功能的修改最多只影响相邻层
+    * 只要上层提供标准接口，就可实现功能复用
+  * 缺点：
+    * 并不是每个系统都容易的划分层次，也没有统一方法划分成层次
+    * 层次过多会造成系统性能降低
+    * 当用户请求大量增加时，必须依次扩展每一层处理能力。若层内耦合度太高，系统扩展会很困难
+
+* 数据共享体系
+
+  * ![image-20231226102245993](https://img-blog.csdnimg.cn/direct/4beb739a245642d79e5e0b019811587c.png)
+  * 优缺点![image-20231226102320522](https://img-blog.csdnimg.cn/direct/1fa2d1a160534865905a102486ed3eab.png)
+
+* 事件驱动体系架构
+
+  * 基于事件与消息机制实现软件构建之间的通信的软件架构![image-20231226102741618](https://img-blog.csdnimg.cn/direct/2baa63de21c0437a9c95fdda76ecf184.png)
+  * 案例：windows事件驱动模型![image-20231226102827003](https://img-blog.csdnimg.cn/direct/b9a6312216634546bdc215bee4ee7d91.png)
+  * 优点：
+    * 具有良好扩展性，可以注册新的构建而不影响现有构建
+    * 便于软件维护。只要构建名及其接口不变，就可以用另一个构建代替这个构建
+    * 构建间耦合性低，容易实现软件重用
+  * 缺点：
+    * 削弱了构建对系统的控制能力。一个构建事件触发时，并不能保证其他构建会对其行事件处理响应
+    * 不能高效的解决数据交换问题
+
+  ![image-20231226103545402](https://img-blog.csdnimg.cn/direct/d7c4583189b4430f891eb6eb35fa4ebb.png)
+
+* 客户端 /服务器软件架构
+
+  * 采用分布式系统模式![image-20231226103907325](https://img-blog.csdnimg.cn/direct/b4498de6f4f94d0da26a93ab056a4ff2.png)
+
+  * c/s架构原理
+
+    ![image-20231226103926796](https://img-blog.csdnimg.cn/direct/c840ab58faf847d19b1743bd74fb09f7.png)
+
+    * 优点：
+      * 可实现分布式计算处理，有利于系统负载分担
+      * 交互性强、具有安全的存取模式、响应速度快、利于处理大量数据
+    * 缺点：
+      * 缺少通用性，系统维护升级需要重新部署，增加了维护和管理的难度
+      * 只限于小型的局域网运营
+
+  * b/s架构原理![image-20231226104608513](https://img-blog.csdnimg.cn/direct/a12c737ff1634f2c90b88d5d1e2d7dca.png)
+
+    * 优点：
+      * 分布性强，服务器可以在任何地点运行
+      * 访问方便，只要网络、浏览器就可以访问系统应用进行访问
+      * 系统处理负载能力强，可以将负载分布在web服务器、应用服务器等。还可以通过负载均衡、集群技术支持更大负载处理
+      * 系统运维方便
+      * 用户共享性强，可以支持不同地点用户共享访问系统
+    * 缺点：
+      * 个性化处理、人机交互性能不如cs
+      * 系统安全性设计需要考虑更多内容
+
+* 微核体系架构
+
+  * **将目标软件分为软件内核和插件两部分**
+
+  ![image-20231226105458537](https://img-blog.csdnimg.cn/direct/4a05dc08d7e44879aeaaf1a4256b60bf.png)
+
+  * 优缺点：![image-20231226105514006](https://img-blog.csdnimg.cn/direct/16c11d62477d43b5a2eb5b5ff857eb3c.png)
+
+* 微服务架构
+
+  * ![image-20231226110208804](https://img-blog.csdnimg.cn/direct/0a2bbdceae50496da9b1c73d991d96fe.png)
+  * 案例：淘宝开放平台![image-20231226110311056](https://img-blog.csdnimg.cn/direct/96abb93420bb492b991e38fe464be8a2.png)
+  * 优缺点：![image-20231226110351086](https://img-blog.csdnimg.cn/direct/ef3762dec56844ad8ca64373b377ed15.png)
+
+### **3.软件架构模式**
+
+* 抽象层次高→低：
+  * 架构风格、架构模式、设计模式
+
+![image-20231226110549325](https://img-blog.csdnimg.cn/direct/0d2417b2c3d842e385130fd39252f73c.png)
+
+* 代理者模式
+  * 需要代理者边沿客户端和服务端的中介角色![image-20231226112148049](https://img-blog.csdnimg.cn/direct/507f32e4fb9e4956b7da6127a0272208.png)
+  * 案例：![image-20231226112202317](https://img-blog.csdnimg.cn/direct/0bf285b2fc9f4ba995e74b2c6b2d2fb8.png)
+    * 代理者类用到的是服务端的接口
+* 集中控制模式
+  * ![image-20231226112235906](https://img-blog.csdnimg.cn/direct/89b221629a7c479eacfa5a1b4f15afbd.png)
+  * 案例：微波炉控制系统![image-20231226112251435](https://img-blog.csdnimg.cn/direct/6c8ced71c5f845a798c43d7f387d1471.png)
+* 分布式控制模式![image-20231226112310046](https://img-blog.csdnimg.cn/direct/7020a26287354f32b37e9c2b588b416c.png)
+  * 案例：植物工厂控制系统![image-20231226112326014](https://img-blog.csdnimg.cn/direct/06ad0fb24e76425e9ca82a39575646a2.png)
+    * 不同的控制构件之间可以进行信息传递
+* 多层控制模式![image-20231226112839606](https://img-blog.csdnimg.cn/direct/84a640314ec24e26809e85ac0d844e22.png)
+  * 多了个协调者构建
+  * 案例：职务工厂控制系统![image-20231226113005197](https://img-blog.csdnimg.cn/direct/39afc035d80740938dd05ad0a6094eca.png)
+* 抽象分层模式
+  * ![image-20231226113018534](https://img-blog.csdnimg.cn/direct/b579883abab542c0ac2828e13bb44dde.png)
+  * 案例：Unix系统中![image-20231226113037153](https://img-blog.csdnimg.cn/direct/ad90c631077a46c89f56cf7130d766b7.png)
+* 多客户/单服务模式![image-20231226113448400](https://img-blog.csdnimg.cn/direct/a42c92666368402fb392ac08290d87ca.png)
+  * 案例：银行ATM系统![image-20231226113506733](https://img-blog.csdnimg.cn/direct/54ad018730b04035b8ebfc5f72a35396.png)
+* 多客服/多服务![image-20231226113530730](https://img-blog.csdnimg.cn/direct/6ab15b0b89cc44a2864820e6d5e6ae8f.png)
+  * ![image-20231226113535911](https://img-blog.csdnimg.cn/direct/813314bfb57845aab057d359c95aa1fe.png)
+* 多层客户/服务模式
+  * ![image-20231226113705520](https://img-blog.csdnimg.cn/direct/5c044d5d60204855af82ae5318a11cc5.png)
+  * **有一个同时扮演客户端和服务端的中间层**
+  * 案例：银行ATM![image-20231226113828539](https://img-blog.csdnimg.cn/direct/d7e1ce9f2ea44d8bbd7d2eb0cb857421.png)
+
+### 4.软件架构通信模式
+
+* 调用/返回模式
+
+  ![image-20231226121432903](https://img-blog.csdnimg.cn/direct/4f92d4f28332497ca91679701d8fd2d6.png)
+
+  * 案例：银行服务子系统![image-20231226121744598](https://img-blog.csdnimg.cn/direct/877bc3e23e4e4701b667c746cf88e434.png)
+
+* 异步消息通信模式
+
+  * ![image-20231226121800023](https://img-blog.csdnimg.cn/direct/f4ea585b94734eda8cae16ac68f0c186.png)
+  * 案例：骑车控制系统![image-20231226121940998](https://img-blog.csdnimg.cn/direct/41e8a7474a5f4e65a2c57f3097f8621e.png)
+
+* 同步消息通信模式
+
+  * ![image-20231226121956100](https://img-blog.csdnimg.cn/direct/be8bd69fd6c344ed8486a266f289b45e.png)
+  * 案例：银行AMT![image-20231226122046679](https://img-blog.csdnimg.cn/direct/39f29679521b4dacbaee266867a1f32c.png)
+
+* 服务、转发、发现通信模式
+
+  * ![image-20231226122146677](https://img-blog.csdnimg.cn/direct/6189a6e2f55e4eafb790da9fa632cae8.png)
+  * 案例：web服务实现![image-20231226122212176](https://img-blog.csdnimg.cn/direct/d54db7a4cf8e491eaa3557622c203540.png)
+
+* 广播、组播通信
+
+  * ![image-20231226122232824](https://img-blog.csdnimg.cn/direct/4e461f12bab74b508be6243165d7926b.png)
+  * 案例：视频监控跟踪系统![image-20231226122250843](https://img-blog.csdnimg.cn/direct/8c43a3e7aafd49b297469cfdf0492b85.png)
+
+### 5.软件架构事物模式
+
+* 两阶段提交协议
+  * 用于分布式系统中原子事物处理，要么都成功，要么都失败![image-20231226122350255](https://img-blog.csdnimg.cn/direct/8dcff0009da7404ebc112ab1760cc0bc.png)
+    * 铜火锅一个提交协调构建与多个服务构建进行通信协调
+  * 案例：银行转账![image-20231226122645479](https://img-blog.csdnimg.cn/direct/adb7608c5bed4492b4b781a1825f248e.png)
+* 复合事物
+  * 一个事物可以被分为若干更小的事物![image-20231226122739532](https://img-blog.csdnimg.cn/direct/3f7fc55786144b80b3fc3e5b508cb0fe.png)
+  * 案例：航班预定功能![image-20231226123152304](https://img-blog.csdnimg.cn/direct/b98b09039c964051abf493aacdd2c092.png)
+
+* MVC、MVP、MVVM在演化过程中分别解决了什么问题
+  * ![image-20231226124909873](https://img-blog.csdnimg.cn/direct/998a1718838146f09bd76854ffd634e0.png)
+  * MVP改变了MVC的通信方向
+    * View 与 model不通行，通过presenter双向传递
+    * 解决了MVC中Controller职责不清的问题
+  * MVVM模式
+    * 采用数据绑定
+      * 单向绑定：view model变化后，view会自动变动，自动反应在view model
+      * 双向绑定：view model和view任何一方变了后，另一方都会自动更新
+
+
+
+## 第六章 详细设计与设计模式
+
+
+
+### 1.软件建模详细设计原则
+
+* 开闭原则![image-20231226130004563](E:\Typora\pictures\image-20231226130004563.png)
+
+  * 案例![image-20231226130023203](E:\Typora\pictures\image-20231226130023203.png)
+    * 方法：用接口，实现的方法修改源码
+
+* 里式替换
+
+  * 子类继承父类，但不能改变其原有的功能![image-20231226130327946](E:\Typora\pictures\image-20231226130327946.png)
+
+  * 案例：
+
+
+    ![image-20231226130441474](E:\Typora\pictures\image-20231226130441474.png)![image-20231226130342272](E:\Typora\pictures\image-20231226130342272.png)
+
+* 依赖倒置
+
+  * 基于抽象类编程、不依赖具体类编程
+  * 面向接口编程、不要面向实现编程![image-20231226130535564](E:\Typora\pictures\image-20231226130535564.png)
+  * 案例![image-20231226131614442](E:\Typora\pictures\image-20231226131614442.png)
+
+* 接口分离原则
+
+  * **一个构建对外应提供不通服务的专用接口**
+  * 提供者为不通的访问构建类型提供一个特定的接口
+
+  ![image-20231226131903197](E:\Typora\pictures\image-20231226131903197.png)
+
+  * 案例：学生成绩管理程序![image-20231226131916540](E:\Typora\pictures\image-20231226131916540.png)
+
+* 单一职责原则
+
+  * 一个类有且仅有一个功能职责，否则就应该被拆分![image-20231226132123122](E:\Typora\pictures\image-20231226132123122.png)
+  * 案例：学生工作管理![image-20231226132149375](E:\Typora\pictures\image-20231226132149375.png)
+
+* 迪米特法则(最少知识原则)
+
+  * 只跟有直接关系的人交流
+  * 没有关系的，通过第三方转发![image-20231226132422250](E:\Typora\pictures\image-20231226132422250.png)
+  * 案例：粉丝和明星![image-20231226132434093](E:\Typora\pictures\image-20231226132434093.png)
+
+* 高内聚原则![image-20231226132628804](E:\Typora\pictures\image-20231226132628804.png)
+
+  * 案例![image-20231226132637579](E:\Typora\pictures\image-20231226132637579.png)
+
+* 松耦合原则
+
+  * ![image-20231226143026462](E:\Typora\pictures\image-20231226143026462.png)
+
+
+
+* 问题探讨
+
+  * ![image-20231226143106926](E:\Typora\pictures\image-20231226143106926.png)
+
+    * 违反了接口分离原则，连接与接收功能应该分成两个接口实现
+
+  * ![image-20231226143230070](E:\Typora\pictures\image-20231226143230070.png)
+
+    * 违反了单一职责原则，一个类应该只有一类特定的功能。需要将该类分为三个类，分别的功能是获取连接、找到消费者和创建和呈现表格
+
+    ![image-20231226143509521](E:\Typora\pictures\image-20231226143509521.png)
+
+  2.接口的使用
+
+  ![image-20231226144311518](E:\Typora\pictures\image-20231226144311518.png)
+
+  3.抽象类的使用
+
+![14617c601700b217262126a8de67642d](E:\Typora\pictures\14617c601700b217262126a8de67642d.png)
+
+* 接口和抽象类的区别
+  * 抽象类
+    * 是对一组具有相同属性和方法、逻辑上有关系的类抽象
+    * 提供部分方法的实现代码
+    * 体现一种泛化关系
+    * 在问题域分析中发现
+  * 接口
+    * 是对一组具有相同属性和方法、逻辑上没有关系的类抽象
+    * 接口不实现任何方法的代码实现
+    * 接口体现的是契约关系
+    * 接口是在设计中发现
+
+**4.类之间的6种关系耦合强度 低→高**
+
+* 依赖
+  * 是一种使用关系，一个类将另一个类用作函数的参数
+* 关联
+  * 一个类将另一个类用作属性
+* 聚合
+  * 类脱离主体能单独存在
+* 组合
+  * 类不能脱离主体单独存在
+* 实现
+* 继承
+
+### 2.设计类图
+
+![image-20231226150546531](E:\Typora\pictures\image-20231226150546531.png)
 
 
 
