软件架构简结

--- a/软件架构/软件架构.md
+++ b/软件架构/软件架构.md
@@ -386,75 +386,75 @@
 
 ### 1.软件建模详细设计原则
 
-* 开闭原则![image-20231226130004563](E:\Typora\pictures\image-20231226130004563.png)
+* 开闭原则![image-20231226130004563](https://img-blog.csdnimg.cn/direct/de27504186534d2d8ed80b804e6ce4c2.png)
 
-  * 案例![image-20231226130023203](E:\Typora\pictures\image-20231226130023203.png)
+  * 案例![image-20231226130023203](https://img-blog.csdnimg.cn/direct/e18a76cfe5564e978a9868af187c4f5b.png)
     * 方法：用接口，实现的方法修改源码
 
 * 里式替换
 
-  * 子类继承父类，但不能改变其原有的功能![image-20231226130327946](E:\Typora\pictures\image-20231226130327946.png)
+  * 子类继承父类，但不能改变其原有的功能![image-20231226130327946](https://img-blog.csdnimg.cn/direct/42eb131382aa4d4ea485f287dd8e5268.png)
 
   * 案例：
 
 
-    ![image-20231226130441474](E:\Typora\pictures\image-20231226130441474.png)![image-20231226130342272](E:\Typora\pictures\image-20231226130342272.png)
+    ![image-20231226130441474](https://img-blog.csdnimg.cn/direct/b87cb15e64e347738c0800667c721550.png)![image-20231226130342272](https://img-blog.csdnimg.cn/direct/9555bd07485248e089ecd6bac82231f2.png)
 
 * 依赖倒置
 
   * 基于抽象类编程、不依赖具体类编程
-  * 面向接口编程、不要面向实现编程![image-20231226130535564](E:\Typora\pictures\image-20231226130535564.png)
-  * 案例![image-20231226131614442](E:\Typora\pictures\image-20231226131614442.png)
+  * 面向接口编程、不要面向实现编程![image-20231226130535564](https://img-blog.csdnimg.cn/direct/36337e3b52f34dc080b7c11f10824a85.png)
+  * 案例![image-20231226131614442](https://img-blog.csdnimg.cn/direct/d2333bfe89d540e9b10814a6ee718bb0.png)
 
 * 接口分离原则
 
   * **一个构建对外应提供不通服务的专用接口**
   * 提供者为不通的访问构建类型提供一个特定的接口
 
-  ![image-20231226131903197](E:\Typora\pictures\image-20231226131903197.png)
+  ![image-20231226131903197](https://img-blog.csdnimg.cn/direct/8faa45c3cd1e4fe3ab5a9889fea8d2ef.png)
 
-  * 案例：学生成绩管理程序![image-20231226131916540](E:\Typora\pictures\image-20231226131916540.png)
+  * 案例：学生成绩管理程序![image-20231226131916540](https://img-blog.csdnimg.cn/direct/8e9ba609666d44ea8970d49d2411daa4.png)
 
 * 单一职责原则
 
-  * 一个类有且仅有一个功能职责，否则就应该被拆分![image-20231226132123122](E:\Typora\pictures\image-20231226132123122.png)
-  * 案例：学生工作管理![image-20231226132149375](E:\Typora\pictures\image-20231226132149375.png)
+  * 一个类有且仅有一个功能职责，否则就应该被拆分![image-20231226132123122](https://img-blog.csdnimg.cn/direct/7dbd28db453e40be93dfa7b694fa7f48.png)
+  * 案例：学生工作管理![image-20231226132149375](https://img-blog.csdnimg.cn/direct/417984998b804e5bb57e37e09c3a66cf.png)
 
 * 迪米特法则(最少知识原则)
 
   * 只跟有直接关系的人交流
-  * 没有关系的，通过第三方转发![image-20231226132422250](E:\Typora\pictures\image-20231226132422250.png)
-  * 案例：粉丝和明星![image-20231226132434093](E:\Typora\pictures\image-20231226132434093.png)
+  * 没有关系的，通过第三方转发![image-20231226132422250](https://img-blog.csdnimg.cn/direct/dffcb4f21509429bbaaa425e50ba43da.png)
+  * 案例：粉丝和明星![image-20231226132434093](https://img-blog.csdnimg.cn/direct/a43795dd564d400d996492f19717f32e.png)
 
-* 高内聚原则![image-20231226132628804](E:\Typora\pictures\image-20231226132628804.png)
+* 高内聚原则![image-20231226132628804](https://img-blog.csdnimg.cn/direct/589c23258f094e5ba239af9ce06303ed.png)
 
-  * 案例![image-20231226132637579](E:\Typora\pictures\image-20231226132637579.png)
+  * 案例![image-20231226132637579](https://img-blog.csdnimg.cn/direct/9dbc674c53f24dc3933a4d2c4a4c7dc4.png)
 
 * 松耦合原则
 
-  * ![image-20231226143026462](E:\Typora\pictures\image-20231226143026462.png)
+  * ![image-20231226143026462](https://img-blog.csdnimg.cn/direct/31bc8cbb64ba418aa18630796a556fbd.png)
 
 
 
 * 问题探讨
 
-  * ![image-20231226143106926](E:\Typora\pictures\image-20231226143106926.png)
+  * ![image-20231226143106926](https://img-blog.csdnimg.cn/direct/e914fd7922904332b1641a952542eb74.png)
 
     * 违反了接口分离原则，连接与接收功能应该分成两个接口实现
 
-  * ![image-20231226143230070](E:\Typora\pictures\image-20231226143230070.png)
+  * ![image-20231226143230070](https://img-blog.csdnimg.cn/direct/71b119ef2a2f494e9f3213c878b3a698.png)
 
     * 违反了单一职责原则，一个类应该只有一类特定的功能。需要将该类分为三个类，分别的功能是获取连接、找到消费者和创建和呈现表格
 
-    ![image-20231226143509521](E:\Typora\pictures\image-20231226143509521.png)
+    ![image-20231226143509521](https://img-blog.csdnimg.cn/direct/8c155d3e146d4473ac93dd55fbf7c481.png)
 
   2.接口的使用
 
-  ![image-20231226144311518](E:\Typora\pictures\image-20231226144311518.png)
+  ![image-20231226144311518](https://img-blog.csdnimg.cn/direct/68d42b1465b0462ab71b3c368fb6c073.png)
 
   3.抽象类的使用
 
-![14617c601700b217262126a8de67642d](E:\Typora\pictures\14617c601700b217262126a8de67642d.png)
+![14617c601700b217262126a8de67642d](https://img-blog.csdnimg.cn/direct/1aea3de2b687466b88bac5697eb226e2.png)
 
 * 接口和抽象类的区别
   * 抽象类
@@ -483,7 +483,204 @@
 
 ### 2.设计类图
 
-![image-20231226150546531](E:\Typora\pictures\image-20231226150546531.png)
+![image-20231226150546531](https://img-blog.csdnimg.cn/direct/443e21ad1c414e1da17a0a3b2cacd187.png)
+
+### 3.顺序图与通信图
+
+![image-20231226152823821](https://img-blog.csdnimg.cn/direct/30279499b7f943779599c1da7de167e2.png)
+
+### 4.类操作
+
+* 发现类操作
+
+  * 顺序图或者通信图的对象交互中每一条消息都对应一个类的操作为其服务
+
+  ![image-20231226153049100](https://img-blog.csdnimg.cn/direct/d275ebd979e84f329b1262344d8b6340.png)
+
+* 重点问题讨论![image-20231226153437139](https://img-blog.csdnimg.cn/direct/36b18d10e80f433dbafd7bcdaae8e52a.png)
+
+  * 两个处理逻辑：
+
+    * 订单结账和信用卡支付
+
+  * 各对象类型
+
+    * 参与者：customer、payment processor
+    * 控制类：Order checkout、CreditCard payment
+    * 界面类：checkout page
+    * 实体类：Order、OrderItem，Item
+
+    ![image-20231226154420652](https://img-blog.csdnimg.cn/direct/742ecdd259ad49d287cc80a78e474940.png)
+
+![image-20231226153938347](https://img-blog.csdnimg.cn/direct/ff4ccf815281483a844a2efc22f3f893.png)
+
+
+
+### 5.状态机图
+
+* 连线处的文字表示要发生什么事件，才会转移到箭头指向的行为
+* 方框内的名字表示当前处于什么状态，行为定义为当前状态要做的事情
+
+![image-20231226154442044](https://img-blog.csdnimg.cn/direct/0e6a8360d3c449feb2d990cdde4a96cc.png)
+
+
+
+
+
+### 6.构件图
+
+* 构建之间的依赖关系
+
+  * ![image-20231226155704055](https://img-blog.csdnimg.cn/direct/b21f8fc214434ba78ace1b09fdcb9a20.png)
+
+* 请求接口和供给接口
+
+  * ![image-20231226155724846](https://img-blog.csdnimg.cn/direct/c28c230e10dc4e26aae7cdeb507c4294.png)
+
+* 端口
+
+  * ![image-20231226155754832](https://img-blog.csdnimg.cn/direct/2d3c4401e948470e92bb77fd45972b64.png)
+
+* 端口的连接--连接器
+
+  * **装配连接器：**用于连接构件之间的端口
+
+  * **委托连接器**：用于构建与内部端口之间的连接
+
+    * 要么是供给端口连供给端口
+
+    * 要么是请求端口连请求端口![image-20231226160055903](https://img-blog.csdnimg.cn/direct/6eb257292465462ba4f36c53979640cb.png)
+
+      ![image-20231226160115737](https://img-blog.csdnimg.cn/direct/54124ffc38ac42748a70e7d4d33400d9.png)
+
+  * 案例：![image-20231226160143168](https://img-blog.csdnimg.cn/direct/4baaf187a8b94ecbb7e5364b80cc1b3e.png)
+
+
+
+
+
+### 7.部署图
+
+* ![image-20231226160241147](https://img-blog.csdnimg.cn/direct/75026a6c3f4343c0a46b4ff6061ba9e1.png)
+* ![image-20231226160258524](https://img-blog.csdnimg.cn/direct/9beff6e4ae4b4898bdd3ffef317de077.png)
+
+* ![image-20231226161859655](https://img-blog.csdnimg.cn/direct/451b487e2347497f87e0cc99abc8c11a.png)
+  * 在这个房地产按揭交易系统的部署模型中，系统由银行服务器、房地产服务器和个人电脑（PC）构成。银行服务器包括按揭申请（Mortgage Application）构件和客户数据库（Customer DB）构件；房地产服务器包括房产列表（Listing）构件和多重列表（Multiple Listings）构件；个人电脑上则有买家接口（BuyerInterface）构件。 银行服务器的按揭申请构件提供了IMortgageApplication接口，允许用户通过个人电脑上的买家接口构件申请按揭。房地产服务器的房产列表构件也提供了IMortgageApplication接口，允许用户浏览和选择房产。这两个服务器通过IMortgageApplication接口相互交互，使得房产信息能够在按揭申请过程中被考虑。 客户数据库构件存储银行服务器所需的客户信息，而多重列表构件存储房地产服务器上的房产信息。它们是关键的数据源，必须能被相应的服务器构件安全地访问和管理。
+
+
+
+
+
+### 8.包图
+
+![image-20231226160334759](https://img-blog.csdnimg.cn/direct/d18d9a12947049e7818bc40a2fad6b30.png)
+
+* 案例![image-20231226160353398](https://img-blog.csdnimg.cn/direct/4d1049b7255f4e49ab9dc68164136c9d.png)
+  * 多层架构模型的UML包图![image-20231226160438497](https://img-blog.csdnimg.cn/direct/6355a0995e914e67b7b764d3711e49a3.png)
+    * 层间和层内均用虚线箭头
+* ![image-20231226162446581](https://img-blog.csdnimg.cn/direct/d433932787aa48f698deff28d9c00fc9.png)
+  * 《use》关系表示使用依赖，Web Shopping依赖Payment，Mobile Shopping依赖Payment......
+  * 《merge》关系表示合并，Web Shopping、Mobile Shopping、Phone Shopping、和Mail Shopping**合并之后就拥有了Shopping Cart的全部功能** 。也表明了它们共享一些在“Web Shopping”包中定义的通用功能。
+  * 《Access》关系表示私有引入，比如代码中的指定包名类名 。Payment可以访问Shopping Cart中的特定功能或类，但这种访问是受限的。 
+  * 《Import》关系表示公共引入，比如Java中的import之后，就可以直接使用import包中的类了。一旦“Shopping Cart”公共导入了“Inventory”，它就可以直接使用“Inventory”中定义的公共类和接口
+
+### 9.设计模式
+
+1.单例模式
+
+* ![image-20231226165450956](https://img-blog.csdnimg.cn/direct/e687dacce5a44ebba2d8dfc56fd21789.png)
+* 案例，美国总统选举![image-20231226165511733](https://img-blog.csdnimg.cn/direct/06f1650a675a4d4286f31300821b43b3.png)
+
+​	![image-20231226165702878](https://img-blog.csdnimg.cn/direct/3ffceb25892a4edfa838b499e5480a99.png)
+
+* 饿汉式例题![image-20231226165752194](https://img-blog.csdnimg.cn/direct/f09f78a7da494377b9ecedbab0ad2039.png)
+  * ![image-20231226165810558](https://img-blog.csdnimg.cn/direct/2b1d322a00bd41d0804256d40ccb067d.png)
+
+2.适配器模式
+
+* ![image-20231226165910170](https://img-blog.csdnimg.cn/direct/259cf39adbd44debbc4049fb2e38c356.png)
+* 案例：
+  * ![image-20231226170333969](https://img-blog.csdnimg.cn/direct/a72c6c6f9a4e40d98fb6c240826e67d4.png)
+  * ![image-20231226171006650](https://img-blog.csdnimg.cn/direct/781e0bd825774f6f8039901ff2f4adcf.png)
+  * ![image-20231226171642408](https://img-blog.csdnimg.cn/direct/59ea5d8007ad461b9a0c93a048b20ad8.png)
+  * ![image-20231226172104648](https://img-blog.csdnimg.cn/direct/9f183fc12365481eaa815461f61051dc.png)
+  * ![image-20231226172114572](https://img-blog.csdnimg.cn/direct/c94c8776f0214e078ed19eaec308e5cd.png)
+  * ![image-20231226172125237](https://img-blog.csdnimg.cn/direct/469a481d2c754781b2a0e8a9052bc1aa.png)
+
+
+
+3.桥接模式
+
+* 有两个维度的变化时，为了使二者独立变化，降低类的个数；实现抽象类和实现类的分离，采用桥接模式![image-20231226172534006](https://img-blog.csdnimg.cn/direct/2aa8fa987bd746ac882d0514ecb19a2f.png)
+
+* 设计方案：抽象类中设计一个接口，接口是一个变化维度，抽象类又是一个变化维度，具体的变化是由实现接口的具体类以及继承抽象类的具体类。从而达到两个维度的变化
+
+  * 在实例化具体扩展类时，需要传入实现接口类，在具体扩展类中完成业务
+
+  ![image-20231226174018259](https://img-blog.csdnimg.cn/direct/c3dc6b01d1f74341ab454f93ed7b1af4.png)
+
+* 案例
+
+  * ![image-20231226174045878](https://img-blog.csdnimg.cn/direct/ade25b0f4d0840ffbaf96cab91de7304.png)
+  * ![image-20231226175050662](https://img-blog.csdnimg.cn/direct/c8de6793df7440acb84a79356886aca0.png)
+  * ![image-20231226175104115](https://img-blog.csdnimg.cn/direct/b34b980001024758badfb883096c61cf.png)
+  * ![image-20231226175126577](https://img-blog.csdnimg.cn/direct/678470d4c0c946209c20ad10518f886a.png)
+
+* 案例![image-20231226193854831](https://img-blog.csdnimg.cn/direct/e54e39de6997461c9febd5d8fdf60a8e.png)
+
+  * ![image-20231226194028807](https://img-blog.csdnimg.cn/direct/d0cc89a820fc40809d2e95056e093bc3.png)
+
+4.责任链模式
+
+* 变多个处理耦合在一起，需要将请求发给责任链首个对象，后续在对象中传递处理，直到某个对象处理请求或者遍历完责任链
+* ![image-20231226194332712](https://img-blog.csdnimg.cn/direct/b9e031a010eb47198b3ef57ca2f68015.png)
+* 案例：
+  * ![image-20231226194532954](https://img-blog.csdnimg.cn/direct/ee694e56dfb543c886742982ce49173c.png)
+  * ![image-20231226195130388](https://img-blog.csdnimg.cn/direct/bd312572d3524c3f8d172064a4c465d9.png)
+  * ![image-20231226195326279](https://img-blog.csdnimg.cn/direct/6f2890449836470c9f2ed8f2c7945abd.png)
+  * ![image-20231226195337651](https://img-blog.csdnimg.cn/direct/10a29590fa3848b1b08209211799cd43.png)
+* 案例：
+  * ![image-20231226195512455](https://img-blog.csdnimg.cn/direct/4c184c03ff264e809aa75fd5caaeac27.png)
+  * ![image-20231226195637283](https://img-blog.csdnimg.cn/direct/e3c1d938597b40d1af2d0b0b66955cb1.png)
+
+5.中介者模式
+
+* 通过中介对象来封装若干对象之间的交互。实现对象之间的松耦合![image-20231226195826118](https://img-blog.csdnimg.cn/direct/9a577bd0ccc74a0a84b921468a274b58.png)
+* 设计方案：抽象中介者和抽象同事，具体中介者用一个数组容器来存储具体同事类，注册和转发都由抽象中介者来完成
+* ![image-20231226200112737](https://img-blog.csdnimg.cn/direct/6b80ad9a14c34cb1adfd431bf12c2388.png)
+* 案例
+  * ![image-20231226200518504](https://img-blog.csdnimg.cn/direct/5b36cf87d2ce4da0be099853dfcd85a0.png)
+  * ![image-20231226200938935](https://img-blog.csdnimg.cn/direct/9e7bbf3e83cb4640981bdca9af473c28.png)
+  * ![image-20231226201224192](https://img-blog.csdnimg.cn/direct/536410d842c74a59be33f475cfaee7f1.png)
+  * ![image-20231226201229996](https://img-blog.csdnimg.cn/direct/aac592ed37fa4944aeed6f380e1e8f80.png)
+* 案例：房地产交流
+  * ![image-20231226201247326](https://img-blog.csdnimg.cn/direct/07a7c5d613554e56aa32f0808fd4dae1.png)
+  * ![image-20231226202419475](https://img-blog.csdnimg.cn/direct/3b775702c1ae462d9f785889a7bc0927.png)
+
+
+
+* 课后习题
+  * 1.![image-20231226203259168](E:\Typora\pictures\image-20231226203259168.png)
+    * 不满足开闭原则和依赖倒置原则，因为不存在继承，所以里氏替换不存在满不满足
+      * 对扩展开放，对修改封闭。面相对口编程而不是面向实现类编程。
+      * 应增加一个Converter接口类，DAO层直接对该接口进行访问
+  * 2.![image-20231226203546555](E:\Typora\pictures\image-20231226203546555.png)
+    * 存在局限：面相实现类编程、对修改开放。不满足开闭原则和依赖倒置原则
+  * 3.![image-20231226204204651](E:\Typora\pictures\image-20231226204204651.png)
+    * 不满足单一职责原则，一个类应提供一种具体的特殊的服务。而这里一个类提供了三种服务
+    * 不满足依赖倒置和开闭原则
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
