--- a/马原毛概/马原/马原易错知识点.md
+++ b/马原毛概/马原/马原易错知识点.md
@@ -5,7 +5,39 @@
 * 客观条件(阶级条件)：无产阶级作为政治力量登上历史舞台
 * 主观条件：工业革命的深入推动资本主义的迅速发展
 
+2..马克思主义的
 
+* 基石:**世界的物质统一性原理活的灵魂**: 具体问题具体分析
+* **根本观点:实事求是**
+* **基本特征: 科学性、革命性 (人民性、实践性、发展性)**
+* **本质属性:人民性**
+* **区别于其他政党的根本特征:实践性**
+
+
+
+
+
+## 第一章 世界的物质性及其发展规律
+
+1.哲学的基本问题：思维和存在的关系问题
+
+2.**马克思主义认为世界在本质上是：多样性的物质统一的**
+
+3.马克思主义哲学创立之后，开始出现了：**唯物史观与唯心史观的对立**
+
+* 辩证法是黑格尔提出
+* 费尔巴哈：近代形而上学唯物主义，在社会历史观上是唯心主义的
+* 哲学史上第一次科学地对哲学基本问题作出完整概括和论证的是：恩格斯
+
+* 辩证法不是马克思发现的，马克思的贡献是唯物史观和剩余价值理论，唯物史观即克服了形而上学的缺陷
+
+4.我国现代化建设实行的独立自主，自力更生和对外开放方针的理论依据是：**内因外因辩证法，即唯物辩证法**
+
+5.在总量没有增减的条件下，事物结构变化也会引起质变是：**唯物辩证法**
+
+6.社会规律与自然规律的区别在于：**自然规律自发地盲目地起作用，社会规律是通过人们有意识地活动来实现的**
+
+7.
 
 1.**社会意识中的意识形态**：
 
@@ -18,9 +50,38 @@
 * 根本动力：生产力
 * 重要动力：革命、改革、科学技术
 
+# 第二章 实践与认识及其发展规律
 
+1.直接经验与间接经验的关系是：认识的“源”与“流”的关系
 
-## 政治经济学
+2.唯物主义认识论和唯心主义认识论的根本区别在于：是否承认认识是**主体对客体的反映**
+
+* **两者都是可知论**，即世界是可知的
+
+3.反映的能动性的**基本标志是**：创造性
+
+* 能动的标志就是创造
+
+4**.认识开始于感觉**”，这是 **唯物主义和唯心主义都承认的观点**
+
+5.感性认识和理性认识的三种形式
+
+* 感性认识：感知、感觉、表现
+* 理性认识：概念、判断、推理
+
+6.辩证唯物主义认识论认为真理的本性是：主观认识符合客观实际
+
+7.任何科学理论都不能穷尽真理，而只能在实践中不断开辟认识真理的道路。这说明**：真理具有相对性**
+
+8.绝对真理和相对真理是客观真理的两种属性
+
+9.属于唯物主义与唯心主义对立的是：反映论和先验论
+
+10.在真理观上坚持辩证法，就必须承认：真理既是绝对的，又是相对的
+
+11.实践是检验认识真理性的唯一标准，这个标准既是绝对的、又是相对的
+
+## 第四章 政治经济学
 
 3.私有制基础**商品经济的基本矛盾**：私人劳动和社会劳动
 
