--- a/马原毛概/毛概/毛概易混淆知识点总结.md
+++ b/马原毛概/毛概/毛概易混淆知识点总结.md
@@ -99,3 +99,72 @@ D.四马分肥
 ​	首要问题：分清敌友  基本问题：农民问题
 
 ​	根本问题：政权问题   核心问题：领导权问题
+
+# 第一章 毛泽东思想
+
+1.马克思主义中国化的历史性飞跃
+
+* 第一次历史性飞跃：毛泽东思想
+* 第二次历史飞跃：中国特色社会主义理论体系
+
+2.第一次明确提出'马克思主义中国化'是在 **1938年六届六中全会**
+
+3.中国革命最基本的动力
+
+* 无产阶级
+
+4.中国革命问题
+
+* **基本**问题：农民问题
+* **根本**问题：国家政权问题
+* **核心**问题：领导权问题
+* **首要**问题：分清敌友
+
+5.区分新旧民主主义革命的根本标志是：革命领导权掌握在哪个阶级手里
+
+6.新民主主义经济纲领中极具特色的一项内容
+
+* 保护民族工商业
+
+在三大改造中，对资本工商业的改造是最具特色的
+
+7.毛泽东**完整地表述了新民主主义革命总路线**内容的著作是：1948年《在晋绥干部会议上的讲话》
+
+8.中国共产党第一次明确提出反帝反封建民主革命纲领的会议是：1922年中共二大
+
+9.新民主主义革命统一战线的主体是：工农联盟
+
+10.我国的过渡时期是指1949-1956年，过渡时期又分为两个阶段:
+
+* (一) 1949-1952年，是国民经济的恢复和初步发展时期
+  * 完成新民主主义革命的遗留任务，没收地主土地、没收官僚资本主义垄断资本
+* (二) 1953-1956年，是社会主义工业化和三大改造时期。
+
+11.党在**过渡时期的总路线最显著的特点是**
+
+* 实行社会主义建设和社会主义改造同时进行
+
+12.建国以来我们在社会主义建设中所经历的曲折和失误归根结底在于没有完全搞清楚
+
+* **什么是社会主义**、**怎样建设社会**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
