--- a/马原毛概/马原/马原易错知识点.md
+++ b/马原毛概/马原/马原易错知识点.md
@@ -13,11 +13,21 @@
 * **本质属性:人民性**
 * **区别于其他政党的根本特征:实践性**
 
+3.关于**唯物辩证法**
+
+* 地位：唯物辩证法是**认识世界和改造世界的根本方法**
+  * 对比：最根本的世界观和方法论：历史唯物主义和辩证唯物主义
+* 总观点和总特征：联系和发展
+* 实质和核心：**对立统一规避**
+* 唯物辩证法中的根本认识方法：矛盾分析法
+* 矛盾问题的精髓：共性和个性的关系、绝对和相对的关系
+* 事物发展的方向：**向对立面转化**
 
 
 
 
-## 第一章 世界的物质性及其发展规律
+
+# 第一章 世界的物质性及其发展规律
 
 1.哲学的基本问题：思维和存在的关系问题
 
@@ -81,53 +91,114 @@
 
 11.实践是检验认识真理性的唯一标准，这个标准既是绝对的、又是相对的
 
-## 第四章 政治经济学
 
-3.私有制基础**商品经济的基本矛盾**：私人劳动和社会劳动
+
+# 第三章 人类社会及其发展规律
+
+1.生产力的基本要素
+
+*  劳动资料、劳动对象、劳动者
+
+2.生产方式指人类借以向自然界谋取物质生活资料的方式，包括
+
+* 生产力和生产关系两个方面
+
+3.人类社会发展的各种规律：
+
+* 一般规律：生产力、生产关系、经济基础和上层建筑之间的矛盾运动规律
+* 基本规律：生产力和生产关系矛盾运动
+
+4.上层建筑的核心是：**国家政权**
+
+5.政体和国体
+
+* 政体：政治组织形式、根本政治制度
+* 国体：国家性质，反映各阶级的地位
+* 两者既有联系又有区别
+
+6.马克思在《关于费尔巴哈的提纲》中指出，**人的本质在其现实性上是**
+
+* 一切社会关系的总和
+
+
+
+
+
+# 第四章 政治经济学
+
+1.私有制基础**商品经济的基本矛盾**：私人劳动和社会劳动
 
 * 私人劳动是生产资料私有制决定的
 * 社会劳动是社会分工决定的
 * 私人劳动和社会劳动的矛盾构成私有制商品经济的基本矛盾。这是因为这一矛盾贯穿商品经济发展过程的始终， 决定着商品经济的各种内在矛盾及其发展趋势
 
-4.**资本主义基本矛盾**：生产资料的资本主义私人占有和生产社会化之间的矛盾
+2.**资本主义基本矛盾**：生产资料的资本主义私人占有和生产社会化之间的矛盾
 
-5.马克思主义**劳动价值论**的理论和实践意义：为剩余价值理论奠定了基础。劳动二重性理论成为理解政治经济学的枢纽
+3.马克思主义**劳动价值论**的理论和实践意义：为剩余价值理论奠定了基础。劳动二重性理论成为理解政治经济学的枢纽
 
-6.**劳动力成为商品的前提条件：**
+4.**劳动力成为商品的前提条件：**
 
 * 劳动力是自由的
 * 劳动者没有别的商品可以出售
 
-7.**劳动力价值的构成**
+5.**劳动力价值的构成**
 
 * 维持劳动者本人生存所必须的生活资料的价值
 * 维持劳动者家属生存所必须的生活资料的价值
 * 劳动者接收教育和培训所支出的费用
 
-8.劳动力商品的**特点**
+6.劳动力商品的**特点**
 
 * 它的使用价值是价值的源泉，它在消费过程中能够创造新的价值，而且这个新价值比劳动力本身的价值更大
 
-9.资本循环的三个阶段对应的资本的三种职能
+7.资本循环的三个阶段对应的资本的三种职能
 
 * 购买阶段-货币资本
 * 生产阶段-生产资本
 * 售卖阶段-商品资本
   * 三种职能形式上在空间上并存，在时间上继起
 
-10.**政治经济学中的 5个源泉** 
+8.**政治经济学中的 5个源泉** 
 
-**1、抽象劳动是价值的唯一源泉。** 
+1、抽象劳动是价值的唯一源泉。 
 
-**2、具体劳动是使用价值（社会财富）的源泉，但不是唯一源泉。** 
+2、具体劳动是使用价值（社会财富）的源泉，但不是唯一源泉。 
 
-**3、劳动力的使用价值（即劳动），是价值的源泉。** 
+3、劳动力的使用价值（即劳动），是价值的源泉。 
 
-**4、雇佣工人的剩余劳动是形成剩余价值的唯一源泉。** 
+4、雇佣工人的剩余劳动是形成剩余价值的唯一源泉。 
 
-**5、资本积累的源泉是剩余价值**
+5、资本积累的源泉是剩余价值
 
+9.一定的**社会财富的物质内容**由：  构成
 
+* **使用价值**
+* 使用价值是一切商品都具有的共同属性之一
+
+10.商品价值在**本质**上体现了：
+
+* 生产关系，即生产者之间的一定社会关系
+
+11.**商品生产和商品交换的基本规律是：**
+
+* **价值规律**
+* 注意：资本主义生产方式的绝对规律是：剩余价值规律
+
+1**2.马克思区分不变资本和可变资本的依据是：**
+
+* 资本在剩余价值生产中的不同作用
+
+13.**资本主义再生产的特征是**
+
+* 扩大再生产使
+
+14.**资本主义再生产过程的实质是：**
+
+* 物质资料再生产与资本主义生产关系再生产的统一
+
+15.**资本的技术构成是指由生产技术水平决定的：**
+
+* 生产资料和劳动力的比例
 
 
 
