--- a/马原毛概/马原/马原易错知识点.md
+++ b/马原毛概/马原/马原易错知识点.md
@@ -11,16 +11,16 @@
 * **根本观点:实事求是**
 * **基本特征: 科学性、革命性 (人民性、实践性、发展性)**
 * **本质属性:人民性**
-* **区别于其他政党的根本特征:实践性**
+* **区别于其他政党的根本特征:全心全意为人民服务**
 
 3.关于**唯物辩证法**
 
 * 地位：唯物辩证法是**认识世界和改造世界的根本方法**
   * 对比：最根本的世界观和方法论：历史唯物主义和辩证唯物主义
-* 总观点和总特征：联系和发展
-* 实质和核心：**对立统一规避**
-* 唯物辩证法中的根本认识方法：矛盾分析法
-* 矛盾问题的精髓：共性和个性的关系、绝对和相对的关系
+* 总观点和总特征：**联系和发展**
+* 实质和核心：**对立统一规律**
+* 唯物辩证法中的根本认识方法：**矛盾分析法**
+* 矛盾问题的精髓：**普遍性与特殊性之间的辩证关系**
 * 事物发展的方向：**向对立面转化**
 
 
@@ -39,7 +39,7 @@
 * 费尔巴哈：近代形而上学唯物主义，在社会历史观上是唯心主义的
 * 哲学史上第一次科学地对哲学基本问题作出完整概括和论证的是：恩格斯
 
-* 辩证法不是马克思发现的，马克思的贡献是唯物史观和剩余价值理论，唯物史观即克服了形而上学的缺陷
+* 辩证法不是马克思发现的，马克思的贡献是**唯物史观和剩余价值理论**，唯物史观即克服了形而上学的缺陷
 
 4.我国现代化建设实行的独立自主，自力更生和对外开放方针的理论依据是：**内因外因辩证法，即唯物辩证法**
 
@@ -51,20 +51,23 @@
 
 1.**社会意识中的意识形态**：
 
-* 政治、法律思想、道德、艺术、宗教、哲学
+* 根据社会意识的不同层次可分为社会心理和社会意识形式
+  * 属于上层建筑的社会意识形式称为社会意识形态，包括：政治、法律思想、道德、艺术、宗教、哲学
+  * 非社会意识形态(无关阶级利益的)：语言学、心理学、以及自然科学等
+
 
 2.人类**社会发展**的
 
-* 直接动力：阶级斗阵
+* 直接动力：阶级斗争
 * 基本动力：社会基本矛盾
-* 根本动力：生产力
+* 根本动力：生产力与生产关系之间的矛盾
 * 重要动力：革命、改革、科学技术
 
 # 第二章 实践与认识及其发展规律
 
-1.直接经验与间接经验的关系是：认识的“源”与“流”的关系
+1.**直接经验与间接经验的关系是**：认识的“源”与“流”的关系
 
-2.唯物主义认识论和唯心主义认识论的根本区别在于：是否承认认识是**主体对客体的反映**
+2.唯物主义认识论和唯心主义认识论的根本区别在于：是否承认**认识是主体对客体的反映**
 
 * **两者都是可知论**，即世界是可知的
 
@@ -91,17 +94,24 @@
 
 11.实践是检验认识真理性的唯一标准，这个标准既是绝对的、又是相对的
 
+12.价值的基本特征
 
+* 主体性
+* 客观性
+* 多维性
+* 社会历史性
 
 # 第三章 人类社会及其发展规律
 
-1.生产力的基本要素
+1.生产力的**基本要素**
 
-*  劳动资料、劳动对象、劳动者
+* 劳动资料：**生产工具是生产力发展水平的标志**
+* 劳动对象：与劳动资料合称为**生产资料**
+* 劳动者：生产者最活跃的因素
 
-2.生产方式指人类借以向自然界谋取物质生活资料的方式，包括
+2.生产方式指**人类借以向自然界谋取物质生活资料的方式**，包括
 
-* 生产力和生产关系两个方面
+* **生产力和生产关系两个方面**
 
 3.人类社会发展的各种规律：
 
@@ -112,7 +122,7 @@
 
 5.政体和国体
 
-* 政体：政治组织形式、根本政治制度
+* 政体：政治组织形式、根 本政治制度
 * 国体：国家性质，反映各阶级的地位
 * 两者既有联系又有区别
 
@@ -120,7 +130,7 @@
 
 * 一切社会关系的总和
 
-
+7.
 
 
 
@@ -170,7 +180,7 @@
 
 5、资本积累的源泉是剩余价值
 
-9.一定的**社会财富的物质内容**由：  构成
+9.一定的**社会财富的物质内容**由：使用价值构成
 
 * **使用价值**
 * 使用价值是一切商品都具有的共同属性之一
@@ -182,7 +192,7 @@
 11.**商品生产和商品交换的基本规律是：**
 
 * **价值规律**
-* 注意：资本主义生产方式的绝对规律是：剩余价值规律
+* 注意：资本主义生产方式的绝对规律是：**剩余价值规律**
 
 1**2.马克思区分不变资本和可变资本的依据是：**
 
