--- a/马原毛概/毛概/毛概易混淆知识点总结.md
+++ b/马原毛概/毛概/毛概易混淆知识点总结.md
@@ -148,15 +148,93 @@ D.四马分肥
 
 * **什么是社会主义**、**怎样建设社会**
 
+13.中国革命和建设的行动指南
+
+* 毛泽东思想
+
+# 邓小平理论
+
+1.两个解放思想、实事求是的“宣言书”是指
+
+* **1978年12月邓小平《解放思想，实事求是，团结一致向前看》**
+* **1992 南方谈话**
 
 
 
+# 三个代表
+
+1.三个代表”重要思想在（ 党的十六大 2002 ）被写入党章，作为党的指导思想
+
+2.我党决定建立社会主义市场经济体制是在（党的十四大 1992）
+
+3.江泽民同志认为，坚持党的领导，核心是（  坚持党的先进性 ）
+
+4.发展先进文化的重要内容和中心环节是（ 加强社会主义思想道德建设  ）
+
+5.江泽民同志认为，中国共产党必须解决好的两大历史性课题是（  进一步提高党的领导水平和执政水平、提高拒腐防变和抵御风险的能力 ）
+
+6.2000年5月，江泽民在上海主持党建工作座谈会，强调:“三个代表”重要思想是（  **立党之本、执政之基、力量之源** ）注意：没有强国之路！！！
+
+7.在**十六大**报告中，江泽民把社会主义（  **物质文明、政治文明、精神文明**  ）一起确立为社会主义现代化建设的目标。  注：生态文明是胡锦涛在科学发展观中提出！！！
 
 
 
+# 科学发展观
+
+1.内涵和主要内容
+
+* 内涵
+  * 第一要义是发展，核心立场是以人为本，基本要求是全面协调可持续，根本方法是统筹兼顾
+* 内容：乳围绕建设中国特色社会主义
+  * 加快转变经济发展方式
+    * 关键：全面深化经济体制改革
+  * 发展社会主义民主政治
+    * 本质和核心：人民当家作主
+    * 社会主义协商民主，体现了社会主义民主的真实性、广泛性、包容性
+    * 推进依法治国基本方略
+    * 政治体制改革
+  * 推进社会主义文化强国建设
+    * 树立高度文化自信、文化自觉
+  * 构建社会主义和谐社会
+    * 总要求：民主法治、公平正义、诚信友爱、充满活力、安定有序、人与自然和谐相处
+  * 推进生态文明建设
+    * 坚持节约资源和保护环境的基本国策。坚持节约优先、保护优先、自然恢复为主的方针
+  * 全面提高党的建设科学化水平
+    * 党的先进性是历史的具体的，既是一以贯之的，又是与时俱进的
+* 历史地位
+  * 全面建设小康社会、加快推进社会主义现代化的**根本方针**
 
 
 
+2.中国特色社会主义的本质属性是（ 社会和谐 ）
+
+
+
+3.科学发展观形成的
+
+* 现实依据是：社会主义初级阶段的基本国情和新的阶段性特征
+* 实践基础是：党带领人民战胜各种风险挑战、坚持和发展中国特色社会主义的成功探索
+* 时代背景：当今世界发展大势，国外发展的经验教训
+
+
+
+4.中国特色社会主义的本质属性是（社会和谐）
+
+5.（ 良好的生态环境 ）是人和社会持续发展的根本基础
+
+
+
+6.社会主义核心价值体系的基本内容
+
+* 社会主义荣辱观、中国特色社会主义共同理想、以爱国主义为核心的民族精神和以改革创新为核心的时代精神统、民族精神和时代精神、马克思主义指导思想
+* 注意：没有中国共产党的领导
+
+
+
+7.坚持可持续发展，必须走（   ）的文明发展道路
+
+* 生产发展、生活富裕、生态良好
+  * 注意：没有平衡充分
 
 
 
