--- a/马原毛概/马原/马原易错知识点.md
+++ b/马原毛概/马原/马原易错知识点.md
@@ -101,6 +101,10 @@
 * 多维性
 * 社会历史性
 
+13.马克思主义认识论认为，能动的反映论是：
+
+* **摹写和创造的统一**
+
 # 第三章 人类社会及其发展规律
 
 1.生产力的**基本要素**
@@ -200,7 +204,7 @@
 
 13.**资本主义再生产的特征是**
 
-* 扩大再生产使
+* 扩大再生产
 
 14.**资本主义再生产过程的实质是：**
 
@@ -213,6 +217,210 @@
 
 
 
+
+# 大题
+
+# 导论
+
+1.什么是马克思主义
+
+* 马克思主义是关于自然、社会、人类思维一般发展规律的学说，具有明显的阶级性。
+* 是关于社会主义必然替代资本主义，最终实现共产主义的学说。
+* 是关于无产阶级解放、全人类解放，每个人自由而全面发展的学说
+* 是无产阶级政党的指导思想
+
+2.马克思主义的当代价值
+
+* 观察当代世界的认识工具
+* 指导当代中国发展的行动指南
+* 引力社会进步的科学真理
+
+## 第一章
+
+1.物质统一性原理
+
+* 内容：
+  * 世界统一于物质，
+  * 物质统一性原理在于它的物质性，即世界统一的基础是物质
+  * 是多样性的统一
+* **意识统一于物质**
+  * 意识是物质世界长期发展的产物，是物质世界的一种特殊存在
+  * 意识是人脑机能和属性，是客观世界的主观映像
+  * 意识的能动性发挥必须以尊重物质世界客观规律为前提
+* **人类社会统一于物质**
+  * 人类社会是物质世界的组成部分
+  * 人类获取生活资料的活动是物质性的活动
+  * 人类社会存在和发展的基础是物质资料的生产方式
+
+2.矛盾的同一性和斗争性在事物中的作用
+
+* 同一性是矛盾的对立面互相依存、互相贯通的性质。
+  * 同一性是事物发展和存在的前提，矛盾着的对立面互为存在条件，一方以另一发的发展作为自身发展的因素，发展是在矛盾统一体中的发展
+  * 矛盾的对立面互相吸收有利于自身的因素，在统一体中各自发展
+  * 在特定条件下，一方可以向另一方转化，规定者事物发展和前进的方向
+* 斗争性是矛盾对立面相互分离、相互排斥的性质
+  * 矛盾双方的斗阵促使矛盾双方力量发生变化，竞长争高，此消彼长，造成双方力量发展不平衡，为对立面转化，事物量变床在前提
+  * 斗争性是一种矛盾体向另一种矛盾体过渡的决定力量。矛盾双方的相互排斥和否定促使旧的矛盾体破裂，新的矛盾体产生，旧事物发展为新事物
+
+3.联系与发展的五大基本环节
+
+* 内容与形式
+* 原因与结果
+* 必然与偶然
+* 本质与现象
+* 现实与可能
+
+4**.物质与意识的辩证关系**
+
+* 物质决定意识
+  * 意识是人脑这样一种特殊物质的机能和属性，是对客观世界是主观映像，是物质的主观反映
+  * 意识是自然界长期发展的产物，也是社会历史的产物
+* 意识对物质有能动的反作用
+  * 意识具有目的性和计划性
+  * 意识具有创造性
+  * 意识具有指导实践改造客观世界的作用
+  * 意识具有调控人的行为和心理和健康的作用
+* 主观能动性和客观规律性的辩证统一
+  * 尊重客观规律性是充分发挥主观能动性的前提
+  * 只有充分发挥主观能动性，才能正确认识客观规律性
+  * 要正确发挥主观能动性，有以下三个方面
+    * 从实际出发
+    * 实践
+    * 一定的物质手段和物质条件
+
+## 第二章
+
+1.实践的特征
+
+* 客观实在性
+  * 实践的主体、客体和中介都是客观实在的
+  * 实践的水平受到客观条件的制约和客观规律的支配
+* 主观能动性
+  * 人的实践是有意识、有目的的活动
+* 社会历史性
+  * 实践是社会性的活动，实践主体总是处于一定社会关系中，实践的社会性决定了其历史性
+
+2.实践对认识的决定作用
+
+* 实践是认识的来源
+* 实践是认识的目的
+* 实践是认识发展动力
+* 实践是检验真理的唯一标准
+
+3.感性认识和理性认识的辩证关系
+
+* 感性认识是通过实践直接由感觉感受到的事物的现象，具有局限性和片面性，有待于深化为理性认识
+* 理性认识是对感性认识运用抽象思维提炼出的关于事物本质的认识，依赖于理性认识
+* 感性中有理性的因素，理性中也有感性的因素，二者相互渗透、相互包含
+
+4.真理的特性(辩证统一)
+
+* 客观性
+  * 真理是对客观事物及其规律的正确反应，包含着不依赖于人和人的意识的客观因素
+* 绝对性
+  * 是主客观的统一的确定性和发展的无限性，真理都同谬误有着原则的界限。物质世界的无限发展是绝对的，无条件的。人类总是能正确认识无限发展着的事物，这点也是绝对的
+* 相对性
+  * 人们对于真理的认识是在一定条件下的正确认识。从整体客观世界来看，人们是对客观世界某一阶段、某一部分的正确认识，认识是有广度的
+  * 从具体事物而言，人们是对事物某一方面，某一层次的的正确认识，认识是有深度的
+* 绝对型和相对性相互依存、相互包含
+  * 任何真理既是绝对的，又是相对的
+  * 真理的绝对性通过相对性表现出来；真理的相对性之中又有绝对型的颗粒
+  * 真理的发展过程永远是相对走向绝对、接近结对化的过程
+
+5.价值的特性
+
+* 主体性
+* 客观性
+* 多维性
+* 社会历史性
+
+
+
+
+
+## 第三章
+
+1.社会存在和社会意识的辩证关系
+
+* 社会存在决定社会意识
+  * 社会意识根源于社会存在，是在社会生产过程中形成的产物，社会意识是对客观的社会物质形式主观的反应
+  * 社会意识是人们进行社会物质交往的产物
+  * 社会意识是具体的、历史的
+* 社会意识具有相对独立性
+  * 社会意识具有能动的反作用
+  * 社会意识与社会存在具有不完全同步和不平衡性
+  * 社会意识内部各种形式之间的相互影响及各自具有历史继承性
+
+2.社会形态更替的一般规律及其特殊形式
+
+* 多样性和统一性
+* 必然性和社会历史性
+* 前进性和曲折性
+
+3.人民群众在创造历史过程中的决定作用
+
+* 人民群众是物质财富的创造者
+* 人民群众是社会精神财富的创造者
+* 人民群众是社会变革的决定性力量
+* 当然，人民群众创造历史活动受到一定社会历史条件的制约
+
+4.群众观点和群众路线
+
+* 群众观点：人民群众自己解放自己、全心全意为人民服务、一切向群众负责的观点、虚心向群众学习的观点
+* 群众路线：一切为了群众，一切依靠群众、从群众中来，到群众中去
+
+5.为什么说物质生产方式是社会发展的决定性力量
+
+* 是社会存在和发展的基础及决定力量，是人类其他一切活动的前提
+* 决定了社会性质、面貌和结构，制约人们的经济、文化等全部社会生活
+* 决定了社会历史的变化发展，决定了社会形态从低级向高级的更替和发展
+
+6.生产力与生产关系的辩证关系
+
+* 生产力决定生产关系
+  * 生产力状况决定生产关系的性质，是生产关系形成的客观前提和物质基础
+  * 生产力发展决定生产关系的变化，当生产关系不能适应生产力的发展要求时，就要变革旧的生产关系，建立新的生产关系
+* 生产关系对生产力具有能动反作用
+  * 当生产关系适合生产力发展的客观要求时，对生产力起推动作用
+  * 反之起阻碍生产力的作用
+  * 生产关系对生产力的反作用归根结底还是生产力决定的
+
+
+
+## 第四章
+
+1.商品的二因素和劳动的二重性
+
+* 商品的二因素：价值和使用价值(对立统一)
+  * 使用价值：商品能满族人的某种需要的有用性，是商品的自然属性，是交换价值的物质承担者
+  * 价值：凝聚在商品中的无差别的一般人类劳，价值是商品的社会属性。价值是交换价值的基础，交换价值是价值的表现形式
+  * 对立：二者不可同时兼得
+  * 统一：二中是商品的两个因素。使用价值是价值的物质承担者，价值寓于使用价值之中
+* 劳动的二重性：具体劳动和抽象劳动（对立统一）
+  * 具体劳动：是指生产一定使用价值的具体形式的劳动。具体劳动创造了商品的使用价值
+  * 抽象劳动：人类无差别的劳动，创造商品的价值
+  * 两者是同一劳动的两种规定。任何一种劳动，一方面是特殊的具体劳动，另一方面又是一般的抽象劳动，这就是劳动的二重性。劳动的二重性决定了商品的二因素
+  * 统一：二者是同一劳动不可分割的两个方面，二者在时间上和空间上是统一的
+  * 对立：两者反应的是劳动的不同属性，自然属性和社会属性
+
+2.价值和使用价值的对立统一关系
+
+* 同上
+
+3.具体劳动和抽象劳动的对立统一关系
+
+* 同上
+
+4.价值规律及其作用
+
+* 积极作用：
+  * 自发调节生产资料和劳动力在各生产部门的比列
+  * 自发的调节社会收入的分配
+  * 自发的桃姐社会生产力的发展
+* 消极作用
+  * 造成社会资源的浪费
+  * 造成垄断，阻碍科学技术的进步
+  * 导致收入两极分化
 
 
 
