--- a/马原毛概/马原/马原易错知识点.md
+++ b/马原毛概/马原/马原易错知识点.md
@@ -220,7 +220,7 @@
 
 # 大题
 
-# 导论
+## 导论
 
 1.什么是马克思主义
 
@@ -234,6 +234,13 @@
 * 观察当代世界的认识工具
 * 指导当代中国发展的行动指南
 * 引力社会进步的科学真理
+
+3.当代青年如何学习和运用马克思
+
+* 学习和掌握马克思主义的基本立场、基本观点和基本方法
+* 学习和掌握马克思主义中国化时代化的理论成果
+* 坚持理论联系实际的作风
+* 自觉将马克思主义内化于心、外化于行
 
 ## 第一章
 
@@ -307,13 +314,22 @@
 * 实践是认识发展动力
 * 实践是检验真理的唯一标准
 
-3.感性认识和理性认识的辩证关系
+3.实践与认识的辩证运动
+
+* 实践-认识-实践。即由感性认识到理性认识，再由理性认识到实践的飞跃
+* 辩证运动是实践，认识，再实践，再认识的循环往复以致无穷过程
+* 该辩证运动过程中，主观必须统一于客观，认识必须统一于实践
+* 这种统一是认识和实践的矛盾在发展中的统一，是具体的，历史的统一
+
+
+
+4.感性认识和理性认识的辩证关系
 
 * 感性认识是通过实践直接由感觉感受到的事物的现象，具有局限性和片面性，有待于深化为理性认识
 * 理性认识是对感性认识运用抽象思维提炼出的关于事物本质的认识，依赖于理性认识
 * 感性中有理性的因素，理性中也有感性的因素，二者相互渗透、相互包含
 
-4.真理的特性(辩证统一)
+5.真理的特性(辩证统一)
 
 * 客观性
   * 真理是对客观事物及其规律的正确反应，包含着不依赖于人和人的意识的客观因素
@@ -327,12 +343,20 @@
   * 真理的绝对性通过相对性表现出来；真理的相对性之中又有绝对型的颗粒
   * 真理的发展过程永远是相对走向绝对、接近结对化的过程
 
-5.价值的特性
+6.价值的特性
 
 * 主体性
 * 客观性
 * 多维性
 * 社会历史性
+
+7.为什么实践能够成为检验真理的唯一标准
+
+* 从真理的本性和实践的特点来回答
+* 真理的本性
+  * 真理是对客观事物及其规律的正确反映,本性在于主客观相符合，只有作为主客观联系桥梁的实践才能检验其唯一标准
+* 从实践的特点来看
+  * 实践是人们改造客观世界的物质活动，主观应用到客观上去，具有直接现实性
 
 
 
@@ -385,6 +409,19 @@
   * 反之起阻碍生产力的作用
   * 生产关系对生产力的反作用归根结底还是生产力决定的
 
+7.科学技术对经济和社会发展的作用
+
+* 对生产方式产生了深刻影响
+  * 改变了社会生产力的构成要素
+  * 改变了人们的劳动形式
+  * 改变了社会的经济结构
+* 对生活方式产生了巨大影响
+  * 为人的自由而全面的发展创造了更多条件
+* 促进了思维方式的变革
+  * 通过影响思维主体、思维客体和思维工具，引起思维方式的变革
+
+
+
 
 
 ## 第四章
@@ -411,12 +448,15 @@
 
 * 同上
 
-4.价值规律及其作用
+4.价值规律内容、表现形式及其作用
+
+* 内容：商品的价值量由生产社会必要劳动时间决定的。商品交换以价值量为基础，按照等价交换原则
+* 表现形式：商品价格围绕价值自发波动
 
 * 积极作用：
   * 自发调节生产资料和劳动力在各生产部门的比列
   * 自发的调节社会收入的分配
-  * 自发的桃姐社会生产力的发展
+  * 自发的刺激社会生产力的发展
 * 消极作用
   * 造成社会资源的浪费
   * 造成垄断，阻碍科学技术的进步
