--- a/马原毛概/毛概/毛概易混淆知识点总结.md
+++ b/马原毛概/毛概/毛概易混淆知识点总结.md
@@ -240,6 +240,48 @@ D.四马分肥
 
 
 
+# 简答题
+
+## 第一章 毛泽东思想
+
+1.**毛泽东思想的活的灵魂**
+
+* 实事求是：一切从实际出发，理论联系实际，坚持在实际中检验真理和发展真理
+  * 深入了解事物的本来面貌，把握事物内部的必然联系
+  * 清醒认识和正确把握我国基本国情
+  * 推进实践基础上的理论创新
+* 群众路线：一切为了群众，一切依靠群众，从群众中来，到群众中去
+  * 坚持人民群众是推动历史的根本力量
+  * 坚持全心全意为人民服务的根本宗旨
+  * 保持党同人民的血肉联系
+* 独立自主：坚持独立思考，走自己的路，就是要坚定不移的维护民族独立、捍卫国家主权，把立足点放在依靠自己力量的基础上争取外援。
+  * 坚持中国的事情必须由中国人民自己处理
+  * 坚持独立自主的和平外交政策，坚定不移的走和平发展路线
+
+
+
+2.**毛泽东思想的历史地位**
+
+* 马克思主义中国化的第一个重大理论成果
+* 中国革命和建设的科学指南
+* 中国共产党和中国人民的宝贵的精神财富
+
+
+
+## 第二章 新民主主义革命理论
+
+1.**新民主主义新的内容和特点**
+
+* 
+
+
+
+
+
+
+
+
+
 
 
 
