--- a/马原毛概/毛概/毛概易混淆知识点总结.md
+++ b/马原毛概/毛概/毛概易混淆知识点总结.md
@@ -242,6 +242,19 @@ D.四马分肥
 
 # 简答题
 
+## 前言
+
+1.**马克思主义中国化的科学内涵**
+
+* 将马克思主义同中国具体实际联系
+  * 运用马克思主义立场、观点、方法研究和解决中国革命、建设、发展中的实际问题
+  * 总结提炼中国革命、建设、改革中的实践经验并将其上升为理论，从而认识和掌握客观规律，为马克思主义理论宝库增添新的内容
+  * 医用中国人民喜闻乐见的语言来阐述马克思主义理论，使之成为具有中国特色、中国风格、中国气派的马克思主义
+
+
+
+
+
 ## 第一章 毛泽东思想
 
 1.**毛泽东思想的活的灵魂**
@@ -268,15 +281,211 @@ D.四马分肥
 
 
 
+**3.毛泽东的主要理论**
+
+* 新民主主义革命理论
+* 社会主义革命和社会主义建设理论
+* 革命军队建设和军事战略的理论
+* 政策和策略的理论
+* 思想政治工作和文化工作的理论
+* 党的建设理论
+  * 思想建设、组织建设、作风建设
+
+
+
+
+
+
+
 ## 第二章 新民主主义革命理论
 
 1.**新民主主义新的内容和特点**
 
-* 
+* 内容1948年毛在《在晋绥干部会议上的讲话》提出 ：
+  * 无产阶级领导的，人民大众的，反对帝国主义、封建主义和官僚资本主义的歌名
+* 特点
+  * 世界无产阶级社会主义革命的一部分
+  * 领导力量是中国共产党
+  * 指导思想是马克思列宁主义
+  * 革命前途是社会主义
+
+2.**新旧民主主义革命区别**
+
+* 根本区别：歌名的领导权掌握在无产阶级手中还是资产阶级手中
+
+![image-20240102192817618](https://img-blog.csdnimg.cn/direct/57bf2e8350554f0598d26d524d764bd9.png)
+
+
+
+3.**新民主主义革命的基本纲领**
+
+* 政治纲领
+  * 推翻帝国主义和封建主义的同志，建立一个无产阶级领导的，以工农联盟为基础的，各革命阶级联合专政的新民主主义共和国
+  * 国体：各革命阶级联合专政
+  * 政体：民主集中的人民代表大会制度
+* 经济纲领
+  * 没收封建地主阶级土地归农民所有
+  * 没收官僚资本主义垄断资本归新民主主义国家所有
+  * 保护民族工商业
+* 文化纲领
+  * 无产阶级领导的人民大众的反帝反封建的文化，即民族的科学的大众的文化
+
+
+
+**4.中国为什么走农村包围城市、武装夺取政权的道路**
+
+* 必要性
+  * 中国是一个半殖民地半封建的国家，在内部没有民主制度，而受封建制度的压迫；在外部，没有民族独立，而受帝国主义的压迫。因此，中国革命基本地不是经过长期合法的斗争以进入起义和战争，必须以武装的革命反对武装的反革命，这是中国革命的特点和优点之一
+  * 广大农村则是他们通知的薄弱环节，而农民又是中国革命的主力军，因此，无产阶级要坚持革命，避免在敌强我弱的情况下与敌人做决定胜负的较量，就必须在农村建立革命根据地
+* 重要意义
+  * 以农村包围城市，夺取全国政权的道路，是半殖民地中国在无产阶级领导之下的农民斗争的最高形式，是半殖民地农民斗争发展的必然结果
+* 可能性
+  * 中国是一个政治经济发展不平衡的半殖民地半封建的大国
+  * 有相当力量的正式红军的存在，与地方武装相结合，就能够对付正规化的白色军队
+  * 共产党组织的有力量和它的政策的正确，是红色政权能够存在和发展的主观方面的极为重要的条件
+
+5.**走农村包围城市、武装夺取政权的道路需要处理好哪几个方面的问题**
+
+* 土地革命、武装斗争、农村革命根据地三者之间的关系
+  * 土地革命是基本内容
+  * 武装斗争是主要形式，是土地革命和土地改革的强有力保证
+  * 农村革命根据地是中国革命的战略阵地，是进行武装斗争和开展土地革命的依托
+
+
+
+## 第三章 社会主义改造理论
+
+1.**为什么说新民主主义社会是一个过渡性社会**
+
+* 社会性质：是一个过渡性质的社会，不是一个独立的社会形态
+* 阶级构成：工人阶级、农民阶级、小资产阶级、民族资产阶级
+* 主要矛盾：工人阶级和资产阶级的矛盾
+* 国体：各革命阶级联合专政：
+* 五种经济成分
+  * 社会主义性质的集体经济和国营经济
+  * 半社会主义性质的合作社经济
+  * 农民和手工业者的个体经济
+  * 私人资本主义经济
+  * 国家资本主义经济
+
+
+
+2.**党在过渡时期的总路线及相互关系**
+
+* 主要内容：在一个相当长的时间内，逐步实现国家的社会主义工业化，并逐步实现国家对农业、手工业和资本主义工商业的改造
+* 关系：
+  * 一化是主体，三改是两翼，两者相辅相成，相互促进
+  * 这是一条社会主义建设和社会主义改造同时并举的路线，体现了社会主义工业化和社会主义改造的紧密结合
+  * 体现了解放生产力和发展生产力、变革生产关系和发展生产力的有机统一 
+
+
+
+**3.确立社会主义基本制度的重大意义是什么？**
+
+* 为中国特色社会主义制度的创新和发展提供了重要前提
+* 极大的提高了工人阶级和广大劳动人民的积极性、创造性，极大的促进了我国社会生产力的发展
+* 我国社会主义基本制度的确立，是世界社会主义发展史上一个历史性的伟大胜利，增强了社会主义的力量，对维护世界和平产生了积极的影响
+* 是马克思列宁主义关于社会主义革命理论在中国的正确运用和创造性发展的结果
+
+## 第四章 社会主义建设道路初步探索的理论成果
+
+1.**党在社会主义建设道路初步探索的理论成果**
+
+* 调动国内外一切积极因素为社会主义事业服务
+  * 《论十大关系》，以苏为鉴，独立自主地探索合适中国情况的社会主义建设道路
+* 正确认识和处理社会主义社会矛盾
+  * 基本矛盾：生产力生产关系；经济基础和上层建筑之间的矛盾
+  * 主要矛盾：人民对于经济文化迅速发展的需要同经济文化不能满足人民需要的状况的矛盾；人民对于建立工业国和落后的农业国的现实之间的矛盾
+* 走中国化道路建设
+  * 以农业为基础，工业为主导，农轻重为序
+
+2.**如何调用一切积极因素为社会主义事业服务？**
+
+* 坚持共产党的领导
+* 必须发展社会主义民主政治
+* 有一个如何认识社会主义发展阶段和社会主义建设规律的问题
+* 推动经济发展，解决贫富问题
+
+
+
+3.**如何认识党在社会主义建设道路初步探索的意义?**(与社会主义基本制度的确定联系记忆)
+
+* 巩固和发展了我国社会主义制度
+* 为开创中国特色社会主义提供了宝贵经验、理论准备和物质基础
+* 丰富了科学社会主义的理论和实践
+
+
+
+4.**党在社会主义建设道路初步探索的经验教训**
+
+* 必须坚持马克思主义与中国实际相结合，探索符合中国特点的社会主义建设道路
+* 必须正确认识社会主义社会的主要矛盾和根本任务，集中力量发展生产力
+* 必须从实际出发进行社会主义建设，建设规模要与国力相适应，不能急于求成
+* 必须发展社会主义民主，健全社会主义法制
+* 必须坚持党的民主集中制和集体领导制度，加强执政党建设
+* 必须坚持对外开放，借鉴和吸收人类文明成果建设社会主义，不能关起门来搞建设
 
 
 
 
+
+## 第五章 邓小平理论
+
+**1.和平统一、一国两制的主要内容和意义**
+
+* 主要内容：
+  * 核心：坚持一个中国
+  * 两制并存，在祖国统一的前提下，国家的主体部分实行社会主义制度，同时在台湾、香港、澳门保持原有的社会制度和生活方式长期不变，高度自制
+* 意义：
+  * 一国两制是邓小平运用辩证唯物主义和历史唯物主义解决一个国家的统一问题
+  * 既体现了坚持祖国统一、维护国家主权的原则性，又体现了照顾历史实际和现实可能的灵活性
+  * 是对马克思主义国家学说的创造性发展
+  * 为解决国际争端提供新思路
+
+
+
+2.**邓小平理论的精髓**
+
+* 精髓：解放思想、实事求是
+* 二者是辩证统一的
+  * 实事求是是解放思想的目的，解放思想就是为了更好的做到实事求是。二者相互依存，不能脱离彼此
+  * 解放思想是实事求是的前提，只有解放思想，才能切实做到实事求是
+  * 只有解放思想才能做到实事求是，只有实事求是才是真正的解放思想
+
+
+
+3.**市场经济理论** 1992 党的十四大
+
+* 计划和市场都是经济手段，而不是划分社会主义和资本主义的标志，社会主义也可以搞市场经济
+* 社会主义与市场经济不存在根本矛盾
+* 把计划经济与市场经济结合起来，更有利于解放生产力，加速经济发展
+
+
+
+4.邓小平的一系列理论
+
+* 社会主义初级阶段理论
+* 党在社会主义初级阶段的基本路线
+* 社会主义根本任务的理论
+* “三步走”战略
+* 改革开放理论
+* 市场经济理论
+* “两手都要抓，两手都要硬”--物质文明和精神文明
+* 一国两制和祖国统一
+* 党的建设理论
+
+
+
+## 第六章 三个代表
+
+1.**三个代表的核心观点或集中概括是什么**
+
+* 中国共产党必须始终代表中国先进生产力的发展要求，代表中国先进的前进方向、代表中国最广大人民的根本利益
+
+2.**发展社会主义先进文化的重要内容和中心环节**
+
+* 必须坚持和完善以公有制为主题，多种所有制经济共同发展的社会主义基本经济制度
+* 必须毫不动摇的巩固和发展公有制经济
 
 
 
