--- a/马原毛概/毛概/毛概易混淆知识点总结.md
+++ b/马原毛概/毛概/毛概易混淆知识点总结.md
@@ -478,6 +478,16 @@ D.四马分肥
 
 ## 第六章 三个代表
 
+**形成条件**
+
+* 是对冷战结束后国际形势科学判断的基础上形成的
+* 是在科学判断党的历史方位和总结历史经验的基础上提出来的
+* 是在建设中国特色社会主义伟大实践的基础上形成的
+
+
+
+
+
 1.**三个代表的核心观点或集中概括是什么**
 
 * 中国共产党必须始终代表中国先进生产力的发展要求，代表中国先进的前进方向、代表中国最广大人民的根本利益
@@ -486,6 +496,44 @@ D.四马分肥
 
 * 必须坚持和完善以公有制为主题，多种所有制经济共同发展的社会主义基本经济制度
 * 必须毫不动摇的巩固和发展公有制经济
+* 必须毫不动摇地鼓励、支持和引导非公有制经济发展
+* 健全社会保障体系
+
+
+
+
+
+## 第七章 科学发展观
+
+1.**科学发展观形成条件**
+
+* 是在深刻把握我国基本国情和新的历史阶段特征的基础上形成和发展的
+* 是在总结改革开放以来特别是党的十六大以来实践经验的基础上形成和发展的
+* 是在深刻分析国际形势，顺应世界发展趋势
+* 借鉴国外发展经验的基础上形成和发展的
+
+
+
+2.**科学发展观的科学内涵和精神实质**
+
+* 科学内涵
+  * 科学发展观的第一要义是：发展
+  * 核心立场是：以人为本
+  * 基本要求是：全面协调可持续
+  * 根本方法是：统筹兼顾
+
+3.**以人为本**
+
+* 以人为本就是以最广大人民的根本利益为本
+* 人：是指人民群众，就是工人、农民、知识分子等劳动者为主体，包括社会各阶级人民在内的中国最广大人民
+* 本：就是根本，就是出发点和落脚点
+* 
+
+
+
+
+
+
 
 
 
